--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.5.13"
+    "vue": "^3.5.13",
+    "vue3-social-sharing": "^1.4.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
+    "sass-embedded": "^1.86.3",
     "vite": "^6.2.1",
     "vite-plugin-vue-devtools": "^7.7.2"
   }
