--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "i18n": "^0.15.1",
     "vue": "^3.5.13",
+    "vue-i18n": "^11.1.9",
+    "vue-router": "^4.5.1",
     "vue3-social-sharing": "^1.4.1"
   },
   "devDependencies": {
