--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "server": "node server.js",
-    "start": ""
+    "server": "node server.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
