--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "vue": "^3.5.13",
     "vue-i18n": "^11.1.9",
     "vue-router": "^4.5.1",
-    "vue3-social-sharing": "^1.4.1",
-    "nodemailer": "^6.9.13"
+    "vue3-social-sharing": "^1.4.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
